--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="twee_standen">Dubbele stand</string>
     <string name="anders_standen">Anders</string>
     
+    <string name="switchuser">Gebruiker wisselen</string>
+    
     <string name="button_reset">Wis alle data (kijk uit!)</string>
     
     <string name="take_pic">Neem een foto</string>
